update training parameters
