# src/better_factory/schemas/train.py
@@ -3,7 +3,9 @@ from marshmallow import Schema, fields
 
 class TrainInputSchema(Schema):
     model = fields.Str(required=True)
-    data = fields.List(fields.Dict())
+    datasets = fields.List(
+        fields.List(fields.Dict())
+    )
     input_tags = fields.List(fields.Str())
     target_tag = fields.Str()
 
