# src/openapi.yaml
@@ -118,22 +118,25 @@ paths:
                     type: string
                 target_tag:
                   type: string
-                data:
+                datasets:
                   type: array
                   items:
-                    type: object
-                    properties:
-                      time:
-                        type: string
-                      additionalProperties:
-                        type: number
-                        format: float
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        time:
+                          type: string
+                        additionalProperties:
+                          type: number
+                          format: float
               example:
                 model: test
-                data:
-                  - time: "2020-02-04T12:35:00.000Z"
-                    tag_name_1: 38.9917030334473
-                    tag_name_2: 20
+                datasets:
+                  - 
+                    - time: "2020-02-04T12:35:00.000Z"
+                      tag_name_1: 38.9917030334473
+                      tag_name_2: 20
                 input_tags: ["tag_1", "tag_2"]
                 target_tag: "tag_1"
         required: false
